--- a/.github/workflows/click-build-dev.yml
+++ b/.github/workflows/click-build-dev.yml
@@ -27,15 +27,15 @@ jobs:
   call-mvn-server:
     uses: ./.github/workflows/mvn-server.yml
     with:
-      EMAIL_ENABLED: $EMAIL_ENABLED
-      SMTP_HOSTNAME: $SMTP_HOSTNAME
-      SMTP_USER: $SMTP_USER
-      SMTP_FROM_EMAIL: $SMTP_FROM_EMAIL
-      SMTP_PASSWORD: $SMTP_PASSWORD
-      ADMIN_EMAIL: $ADMIN_EMAIL
-      EMAIL_SYNC_ERROR_FREQUENCY: $EMAIL_SYNC_ERROR_FREQUENCY
-      EMAIL_SYNC_SEND_FREQUENCY: $EMAIL_SYNC_SEND_FREQUENCY
-      EMAIL_SYNC_ERROR_SUBJECT: $EMAIL_SYNC_ERROR_SUBJECT
-      EMAIL_SYNC_SUBJECT: $EMAIL_SYNC_SUBJECT
-      DEFAULT_APPLICATION_ENVIRONMENT: $DEFAULT_APPLICATION_ENVIRONMENT
+      EMAIL_ENABLED: ${{ env.EMAIL_ENABLED }}
+      SMTP_HOSTNAME: ${{ env.SMTP_HOSTNAME }}
+      SMTP_USER: ${{ env.SMTP_USER }}
+      SMTP_FROM_EMAIL: ${{ env.SMTP_FROM_EMAIL }}
+      SMTP_PASSWORD: ${{ env.SMTP_PASSWORD }}
+      ADMIN_EMAIL: ${{ env.ADMIN_EMAIL }}
+      EMAIL_SYNC_ERROR_FREQUENCY: ${{ env.EMAIL_SYNC_ERROR_FREQUENCY }}
+      EMAIL_SYNC_SEND_FREQUENCY: ${{ env.EMAIL_SYNC_SEND_FREQUENCY }}
+      EMAIL_SYNC_ERROR_SUBJECT: ${{ env.EMAIL_SYNC_ERROR_SUBJECT }}
+      EMAIL_SYNC_SUBJECT: ${{ env.EMAIL_SYNC_SUBJECT }}
+      DEFAULT_APPLICATION_ENVIRONMENT: ${{ env.DEFAULT_APPLICATION_ENVIRONMENT }}
     secrets: inherit
