--- a/.github/workflows/click-build-dev.yml
+++ b/.github/workflows/click-build-dev.yml
@@ -14,11 +14,11 @@ jobs:
     secrets: inherit
   call-mvn-server:
     uses: ./.github/workflows/mvn-server.yml
+    #SMTP_PASSWORD IS STORED AS SECRET
     with:
       EMAIL_ENABLED: true
       SMTP_HOSTNAME: sample_user
       SMTP_USER: sample_user@sample.com
-      SMTP_PASSWORD: ${{ secrets.DEV_SMTP_PASSWORD}}
       SMTP_FROM_EMAIL: noreply@sample.com
       ADMIN_EMAIL: admin_user@sample.com
       EMAIL_SYNC_ERROR_FREQUENCY: 30
