--- a/server/pom.xml
+++ b/server/pom.xml
@@ -61,7 +61,16 @@
 				<artifactId>spring-security-config</artifactId>
 				<version>5.5.7</version>
 			</dependency>
-			
+						<dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>5.5.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.5.7</version>
+        </dependency>
 			<dependency>
 				<groupId>com.oracle.weblogic</groupId>
 				<artifactId>ojdbc7</artifactId>
@@ -123,7 +132,6 @@
 				<artifactId>wfone-common-checkhealth</artifactId>
 				<version>1.3.0</version>
 			</dependency>
-		
 
 			<dependency>
 				<groupId>org.postgresql</groupId>
