Fixed missing entries

--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -24,6 +24,8 @@ env:
 
 jobs:
   plan:
+    name: Plan
+    runs-on: ubuntu-22.04
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
