Added configure aws credentials step

--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -30,6 +30,12 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          role-to-assume: ${{ secrets.AWS_DEPLOY_ROLE }}
+          aws-region: ca-central-1
+
       - uses: hashicorp/setup-terraform@v1
         with:
           terraform_version: ${{ env.TF_VERSION }}
