--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -39,8 +39,8 @@ jobs:
       - name: Terragrunt Apply
         working-directory: ${{env.TG_SRC_PATH}}/${{ input.TARGET_ENV }}
         env:
-          CLIENT_IMAGE: ${{ input.CLIENT_IMAGE }}
-          SERVER_IMAGE: ${{ input.SERVER_IMAGE }}
+          CLIENT_IMAGE: ${{ inputs.CLIENT_IMAGE }}
+          SERVER_IMAGE: ${{ inputs.SERVER_IMAGE }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
         run: terragrunt plan
