--- a/.github/workflows/mvn-server.yml
+++ b/.github/workflows/mvn-server.yml
@@ -36,7 +36,7 @@ on:
     outputs:
       SERVER_IMAGE_NAME: 
         description: Name of server image
-        value: ${{ github.repository }}-server-${{ jobs.docker.outputs.pull_request_number }}
+        value: ${{ jobs.docker.outputs.SERVER_IMAGE_NAME }}
       
 
 
@@ -45,8 +45,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    outputs:
-      pull_request_number: ${{ steps.pr.outputs.pull_request_number }}
 
     steps:
       - uses: actions/checkout@v3
@@ -56,12 +54,6 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-          
-      - name: Get Pull Request Number
-        id: pr
-        run: echo "::set-output name=pull_request_number::$(gh pr view --json number -q .number || echo "")"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
       - name: input properties
         run: |
@@ -102,6 +94,9 @@ jobs:
   docker:
     needs: build
     runs-on: ubuntu-latest
+    outputs:
+      pull_request_number: ${{ steps.pr.outputs.pull_request_number }}
+      SERVER_IMAGE_NAME: ${{ steps.im.outputs.SERVER_IMAGE_NAME }}
     
     steps:
       - uses: actions/checkout@v3
@@ -110,6 +105,16 @@ jobs:
         with:
           name: Package
           path: .
+      
+      - name: Get Pull Request Number
+        id: pr
+        run: echo "::set-output name=pull_request_number::$(gh pr view --json number -q .number || echo "")"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Update image name if PR number present
+        if: ${{"" != jobs.docker.outputs.pull_request_number}}
+        run: echo "IMAGE_NAME = ${{env.IMAGE_NAME}}-${{ steps.pr.outputs.pull_request_number }}" >> $GITHUB_ENV
       
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -128,7 +133,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-${{ steps.pr.outputs.pull_request_number }}
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
         
       - name: Build and push Docker image
         uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
