--- a/.github/workflows/mvn-client.yml
+++ b/.github/workflows/mvn-client.yml
@@ -69,7 +69,7 @@ jobs:
       
       - name: Update image name if PR number present
         if: ${{"" != jobs.docker.outputs.pull_request_number}}
-        run: echo "IMAGE_NAME = ${{env.IMAGE_NAME}}-${{ jobs.docker.outputs.pull_request_number }}" >> $GITHUB_ENV
+        run: echo "IMAGE_NAME = ${{env.IMAGE_NAME}}-${{ steps.pr.outputs.pull_request_number }}" >> $GITHUB_ENV
       
       - name: download artifact
         uses: actions/download-artifact@v3
