--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -12,6 +12,9 @@ on:
       TARGET_ENV:
         type: string
         required: true
+      ALB_NAME:
+        type: string
+        required: true
 
 env:
   TF_VERSION: 1.2.2
@@ -44,5 +47,6 @@ jobs:
           SERVER_IMAGE: ${{ inputs.SERVER_IMAGE }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
+          ALB_NAME: ${{ inputs.ALB_NAME }}
         run: terragrunt plan
 
