AdminTable, Dashboard Header, Search and pagination (#35)
* first commit

* use incident manager as a kick off template

* update angular core to 12

* update angular material to 12

* manually address the lightGallery update

* angular 12 to 13

* angular 13 material update

* log4j2 update

* take out lightGallery

* delete unused stuff part 1

* delete unused stuff part 2

* delete unused stuff part 3

* delete unused stuff part 4

* delete unused stuff part 5, skip the tokenService

* rename to wfnews

* clean out unused asset files

* clean out unused layer configs

* more clean up

* sync with main

* fix the useless merge differences

* use wfcc new components

* hide side menu

* click footer navigate to related bcgov website

* change spring security core to 5.5.7

* change spring-security-web and spring-security-config to 5.5.7.Release

* change spring-security stuff form  5.5.7.Release to 5.5.7

* update spring-security-config in server pom

* initial commit of hooking up localhost api

* commit some state managements

* save ongoing work

* display active fire cournts

* map layers icon

* get rid of incidents store

* clean up

* left panel

* left panel

* Revert "left panel"

This reverts commit dd996ae444703b73251c6b30171c22404b3748ff.

* cancel the revert of last commit- left panel

* more clean up

* linter error fix 1

* Revert "Merge branch 'linting' into main"

This reverts commit bd401b4ae95c4194c8f320af49f9e20369c13788, reversing
changes made to 8b7f907b3659823df696aa5c54c42ff75f0ae87e.

* wfnews-365

* add admin-panel component

* add admin-panel component

* admin component

* table almost done

* fireCentre Options

* some styling adjustment

* align page control

* clean up

* WFNEWS-256 Stages of Control accordion

* clean up some console error

* add sort module

* add missing piece of filter

Co-authored-by: Dylan <dylan.hems

--- a/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
+++ b/client/wfnews-war/src/main/angular/src/assets/data/appConfig.json
@@ -27,8 +27,7 @@
             "rofs": 2000,
             "rofs-table": 500,
             "incidents-table": 500
-        },
-        "lazyAuthenticate": true
+        }
     },
 
     "externalAppConfig": {
@@ -52,10 +51,13 @@
             "scriptsHash": "60875027"
         },
         "bcWildfirePage": "https://www2.gov.bc.ca/gov/content/safety/wildfire-status",
-        "bcWildFireSupportPage": "https://intranet.gov.bc.ca/bcws/provincial-programs/strategic-initiatives-and-innovation/wildfire-one/wildfire-one-training"
+        "bcWildFireSupportPage": "https://intranet.gov.bc.ca/bcws/provincial-programs/strategic-initiatives-and-innovation/wildfire-one/wildfire-one-training",
+        "AGOLfireCentres": "https://services6.arcgis.com/ubm4tcTYICKBpist/ArcGIS/rest/services/British_Columbia_Fire_Centre_Boundaries/FeatureServer/0/query?where=1%3D1&objectIds=&time=&geometry=&geometryType=esriGeometryEnvelope&inSR=&spatialRel=esriSpatialRelIntersects&resultType=none&distance=0.0&units=esriSRUnit_Meter&relationParam=&returnGeodetic=false&outFields=*&returnGeometry=false&returnCentroid=false&featureEncoding=esriDefault&multipatchOption=xyFootprint&maxAllowableOffset=&geometryPrecision=&outSR=&defaultSR=&datumTransformation=&applyVCSProjection=false&returnIdsOnly=false&returnUniqueIdsOnly=false&returnCountOnly=false&returnExtentOnly=false&returnQueryGeometry=false&returnDistinctValues=false&cacheHint=false&orderByFields=&groupByFieldsForStatistics=&outStatistics=&having=&resultOffset=&resultRecordCount=&returnZ=false&returnM=false&returnExceededLimitFeatures=true&quantizationParameters=&sqlFormat=none&f=pjson&token="
     },
 
     "rest": {
+        "incidents": "https://d1wfapi.vividsolutions.com/wfim-incidents-api",
+        "#incidents": "https://i1bcwsapi.nrs.gov.bc.ca/wfim-incidents-api",
         "newsLocal": "http://localhost:8080/wfnews-api-rest-endpoints-1.0.0-SNAPSHOT",
         "orgunit": "https://d1wfapi.vividsolutions.com/wforg-org-unit-api",
         "#orgunit": "https://i1bcwsapi.nrs.gov.bc.ca/wforg-org-unit-api",
