--- a/.github/workflows/click-build-test.yml
+++ b/.github/workflows/click-build-test.yml
@@ -35,5 +35,6 @@ jobs:
       SERVER_IMAGE: ${{ needs.call-mvn-server.outputs.server-image }}
       TARGET_ENV: test
       ALB_NAME: Core-Pp93w9Test-2F70A1-alb
+      VPC_NAME: Test_vpc
     secrets: inherit
     
