--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -15,6 +15,9 @@ on:
       ALB_NAME:
         type: string
         required: true
+      VPC_NAME:
+        type: string
+        required: true
 
 env:
   TF_VERSION: 1.2.2
@@ -48,5 +51,6 @@ jobs:
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
           ALB_NAME: ${{ inputs.ALB_NAME }}
+          VPC_NAME: ${{ inputs.VPC_NAME }}
         run: terragrunt apply --terragrunt-non-interactive -auto-approve
 
