--- a/.github/workflows/click-build-test.yml
+++ b/.github/workflows/click-build-test.yml
@@ -36,5 +36,6 @@ jobs:
       TARGET_ENV: test
       ALB_NAME: Core-Pp93w9Test-2F70A1-alb
       VPC_NAME: Test_vpc
+      SUBNET_FILTER: Web
     secrets: inherit
     
