--- a/.github/workflows/click-build-test.yml
+++ b/.github/workflows/click-build-test.yml
@@ -31,8 +31,9 @@ jobs:
     uses: ./.github/workflows/terragrunt-deploy.yml
     needs: [call-mvn-client, call-mvn-server]
     with:
-      CLIENT_IMAGE: ${{ needs.call-mvn-client.outputs.client-image }}
-      SERVER_IMAGE: ${{ needs.call-mvn-server.outputs.server-image }}
+      #Server and Image name get PR number as appropriate inside deploy step
+      CLIENT_IMAGE: nr-bcws-wfnews-client
+      SERVER_IMAGE: nr-bcws-wfnews-server
       TARGET_ENV: test
       ALB_NAME: Core-Pp93w9Test-2F70A1-alb
       VPC_NAME: Test_vpc
