Added PR number fetching

--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -30,8 +30,10 @@ env:
 
 jobs:
   plan:
-    name: Plan
+    name: Deploy
     runs-on: ubuntu-22.04
+    outputs:
+      pull_request_number: ${{ steps.pr.outputs.pull_request_number }}
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
@@ -40,6 +42,16 @@ jobs:
         with:
           terraform_version: ${{ env.TF_VERSION }}
           cli_config_credentials_token: ${{ secrets.TFC_TEAM_TOKEN }}
+          
+      - name: Get Pull Request Number
+        id: pr
+        run: echo "::set-output name=pull_request_number::$(gh pr view --json number -q .number || echo "")"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Update image name if PR number present
+        if: ${{'' != steps.pr.outputs.pull_request_number}}
+        run: echo "IMAGE_NAME = ${{env.IMAGE_NAME}}-${{ steps.pr.outputs.pull_request_number }}" >> $GITHUB_ENV
 
       - uses: peter-murray/terragrunt-github-action@v1.0.0
         with:
@@ -49,7 +61,7 @@ jobs:
         working-directory: ${{env.TG_SRC_PATH}}/${{ inputs.TARGET_ENV }}
         env:
           TARGET_ENV: ${{ inputs.TARGET_ENV }}
-          CLIENT_IMAGE: ${{ inputs.CLIENT_IMAGE }}
+          CLIENT_IMAGE: ${{ inputs.CLIENT_IMAGE }}-${{steps.pr.outputs.pull_request_number}}
           SERVER_IMAGE: ${{ inputs.SERVER_IMAGE }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
