--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -51,7 +51,12 @@ jobs:
           
       - name: Update image name if PR number present
         if: ${{'' != steps.pr.outputs.pull_request_number}}
-        run: echo "IMAGE_NAME = ${{env.IMAGE_NAME}}-${{ steps.pr.outputs.pull_request_number }}" >> $GITHUB_ENV
+        run: echo "CLIENT_IMAGE = ${{inputs.CLIENT_IMAGE}}-${{ steps.pr.outputs.pull_request_number }}" >> $GITHUB_ENV &&\
+             echo "SERVER_IMAGE = ${{inputs.SERVER_IMAGE}}-${{ steps.pr.outputs.pull_request_number }}" >> $GITHUB_ENV
+          
+      - name: Else, leave image names as they are
+        if: ${{'' == steps.pr.outputs.pull_request_number}}
+        run: echo "CLIENT_IMAGE = ${{inputs.CLIENT_IMAGE}} >> $GITHUB_ENV &&\ echo "SERVER_IMAGE = ${{inputs.SERVER_IMAGE}} >> $GITHUB_ENV
 
       - uses: peter-murray/terragrunt-github-action@v1.0.0
         with:
@@ -61,8 +66,8 @@ jobs:
         working-directory: ${{env.TG_SRC_PATH}}/${{ inputs.TARGET_ENV }}
         env:
           TARGET_ENV: ${{ inputs.TARGET_ENV }}
-          CLIENT_IMAGE: ${{ inputs.CLIENT_IMAGE }}-${{steps.pr.outputs.pull_request_number}}
-          SERVER_IMAGE: ${{ inputs.SERVER_IMAGE }}
+          CLIENT_IMAGE: ${{ env.CLIENT_IMAGE }}
+          SERVER_IMAGE: ${{ env..SERVER_IMAGE }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
           ALB_NAME: ${{ inputs.ALB_NAME }}
