--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -67,7 +67,7 @@ jobs:
         env:
           TARGET_ENV: ${{ inputs.TARGET_ENV }}
           CLIENT_IMAGE: ${{ env.CLIENT_IMAGE }}
-          SERVER_IMAGE: ${{ env..SERVER_IMAGE }}
+          SERVER_IMAGE: ${{ env.SERVER_IMAGE }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
           ALB_NAME: ${{ inputs.ALB_NAME }}
