--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -58,8 +58,8 @@ jobs:
         working-directory: ${{env.TG_SRC_PATH}}/${{ inputs.TARGET_ENV }}
         env:
           TARGET_ENV: ${{ inputs.TARGET_ENV }}
-          CLIENT_IMAGE: ${{ env.CLIENT_IMAGE }}
-          SERVER_IMAGE: ${{ env.SERVER_IMAGE }}
+          CLIENT_IMAGE: ${{ inputs.CLIENT_IMAGE }}
+          SERVER_IMAGE: ${{ inputs.SERVER_IMAGE }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
           ALB_NAME: ${{ inputs.ALB_NAME }}
@@ -72,8 +72,8 @@ jobs:
         working-directory: ${{env.TG_SRC_PATH}}/${{ inputs.TARGET_ENV }}
         env:
           TARGET_ENV: ${{ inputs.TARGET_ENV }}
-          CLIENT_IMAGE: ${{ env.CLIENT_IMAGE }}-${{ steps.pr.outputs.pull_request_number }}
-          SERVER_IMAGE: ${{ env.SERVER_IMAGE }}-${{ steps.pr.outputs.pull_request_number }}
+          CLIENT_IMAGE: ${{ inputs.CLIENT_IMAGE }}-${{ steps.pr.outputs.pull_request_number }}
+          SERVER_IMAGE: ${{ inputs.SERVER_IMAGE }}-${{ steps.pr.outputs.pull_request_number }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
           ALB_NAME: ${{ inputs.ALB_NAME }}
