--- a/.github/workflows/mvn-client.yml
+++ b/.github/workflows/mvn-client.yml
@@ -10,7 +10,7 @@ env:
 
 # Controls when the workflow will run
 on:
-  workflow_dispatch:
+  workflow_call:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -24,17 +24,6 @@ jobs:
         with:
           java-version: '11'
           distribution: 'adopt'
-      
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
-          role-to-assume: ${{ secrets.AWS_ROLE_TO_ASSUME }}
-          role-duration-seconds: 900
-          role-session-name: startup-sample-project-github-action
-          role-skip-session-tagging: true
       
       - name: Add .npmrc file
         run: echo -e $NPMRC > ~/.npmrc
