--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -27,6 +27,7 @@ env:
   TG_VERSION: 0.37.1
   TG_SRC_PATH: terraform
   TFC_WORKSPACE: wfnews-dev
+  REPOSITORY: ghcr.io
 
 jobs:
   plan:
@@ -58,8 +59,8 @@ jobs:
         working-directory: ${{env.TG_SRC_PATH}}/${{ inputs.TARGET_ENV }}
         env:
           TARGET_ENV: ${{ inputs.TARGET_ENV }}
-          CLIENT_IMAGE: ${{ inputs.CLIENT_IMAGE }}
-          SERVER_IMAGE: ${{ inputs.SERVER_IMAGE }}
+          CLIENT_IMAGE: ghcr.io/vivid-cpreston/${{ inputs.CLIENT_IMAGE }}
+          SERVER_IMAGE: ghcr.io/vivid-cpreston/${{ inputs.SERVER_IMAGE }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
           ALB_NAME: ${{ inputs.ALB_NAME }}
@@ -72,8 +73,8 @@ jobs:
         working-directory: ${{env.TG_SRC_PATH}}/${{ inputs.TARGET_ENV }}
         env:
           TARGET_ENV: ${{ inputs.TARGET_ENV }}
-          CLIENT_IMAGE: ${{ inputs.CLIENT_IMAGE }}-${{ steps.pr.outputs.pull_request_number }}
-          SERVER_IMAGE: ${{ inputs.SERVER_IMAGE }}-${{ steps.pr.outputs.pull_request_number }}
+          CLIENT_IMAGE: ghcr.io/vivid-cpreston/${{ inputs.CLIENT_IMAGE }}-${{ steps.pr.outputs.pull_request_number }}
+          SERVER_IMAGE: ghcr.io/vivid-cpreston/${{ inputs.SERVER_IMAGE }}-${{ steps.pr.outputs.pull_request_number }}
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
           ALB_NAME: ${{ inputs.ALB_NAME }}
