--- a/.github/workflows/terragrunt-deploy.yml
+++ b/.github/workflows/terragrunt-deploy.yml
@@ -59,8 +59,8 @@ jobs:
         working-directory: ${{env.TG_SRC_PATH}}/${{ inputs.TARGET_ENV }}
         env:
           TARGET_ENV: ${{ inputs.TARGET_ENV }}
-          CLIENT_IMAGE: ghcr.io/vivid-cpreston/${{ inputs.CLIENT_IMAGE }}
-          SERVER_IMAGE: ghcr.io/vivid-cpreston/${{ inputs.SERVER_IMAGE }}
+          CLIENT_IMAGE: ghcr.io/vivid-cpreston/${{ inputs.CLIENT_IMAGE }}:main
+          SERVER_IMAGE: ghcr.io/vivid-cpreston/${{ inputs.SERVER_IMAGE }}:main
           TFC_PROJECT: ${{ secrets.LICENSE_PLATE }}
           DB_PASS: ${{ secrets.DB_PASS }}
           ALB_NAME: ${{ inputs.ALB_NAME }}
